完成了stream相关API
